# common-pipelines

./: .gitignore  .mergify.yml  .versio.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  cog.toml
.github/: dependabot.yml
.github/actions/: install-cocogitto.yml
.github/actions/install-cocogitto/: action.yml
.github/workflows/: bake-build.yaml  bake-push.yaml  commit-check.yml  crate-release.yml  docker-build.yml  docker-image.yml  docker-push.yml  homebrew-release.yml  markdown-check.yml  release-rust-bake-assets.yaml  release-rust-binary.yml  release-rust-library.yml  release.yml  rust-check.yml  rust-security.yml  shell-check.yml  specdown-check.yml
