[package]
name = "sdfyrnntrwb"
version = "0.1.0"
edition = "2021"
description = "test package, please ignore"
license = "CC0-1.0"
keywords = ["not", "published", "so", "it", "does", "not", "matter"]
categories = ["development-tools", "development-tools::cargo-plugins"]
repository = "https://github.com/PurpleBooth/common-pipelines"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
